<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/principal"
    tools:context=".adicionarConsultaActivity">
    <ImageView
        android:id="@+id/imagemFundo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="80dp"
        android:background="@drawable/borda_superior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textNomePagina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AddConsulta"
        android:textColor="@color/secundaria"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="100dp"
        android:gravity="start"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="93dp">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/fundo_meio_arredondado"/>
            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="20dp"
                android:text="@string/nome_do_medico"
                android:textColor="@color/Text"
                android:textSize="20sp" />
        </RelativeLayout>

        <Spinner
            android:id="@+id/spinnerMedico"
            android:layout_marginLeft="10dp"
            android:layout_width="300dp"
            android:layout_height="34dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Obrigatorio"
            android:textColor="@color/obrigatorio"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:textSize="11dp"
            />
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/fundo_meio_arredondado"/>
            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="20dp"
                android:text="@string/data_da_consulta"
                android:textColor="@color/Text"
                android:textSize="20sp" />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginLeft="10dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/textDiaInicio"
                android:layout_width="35dp"
                android:layout_height="39dp"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/dia"
                android:inputType="date"
                android:text=""
                android:textAlignment="center"/>

            <Spinner
                android:id="@+id/spinnerMesInicio"
                android:layout_width="170dp"
                android:layout_height="match_parent"
                />


            <EditText
                android:id="@+id/textAnoInicio"
                android:layout_width="63dp"
                android:layout_height="38dp"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/ano"
                android:inputType="number"
                android:textAlignment="center"/>

        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Obrigatorio"
            android:textColor="@color/obrigatorio"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:textSize="11dp"
            />
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/fundo_meio_arredondado"/>
            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="20dp"
                android:text="@string/Horario_da_consulta"
                android:textColor="@color/Text"
                android:textSize="20sp" />
        </RelativeLayout>

        <Button
            android:id="@+id/textHorarioRemedio"
            android:layout_width="83dp"
            android:layout_height="39dp"
            android:layout_marginLeft="10dp"
            android:background="@color/secundaria"
            android:hint="@string/exemplo_hora"
            android:onClick="AbrirRelogio"
            android:text="" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="bottom"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_gravity="center">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp">
                    <Button
                        android:id="@+id/button11"
                        android:layout_width="140dp"
                        android:layout_height="50dp"
                        android:background="@drawable/botao_salvar"
                        android:onClick="AdicionarNovaConsulta"
                        android:text="@string/Salvar"
                        android:gravity="center"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>
                    <Button
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:background="@mipmap/ic_shortcut_save"
                        android:onClick="AdicionarNovaConsulta"
                        app:layout_constraintBottom_toBottomOf="@+id/button11"
                        app:layout_constraintEnd_toEndOf="@+id/button11"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/button11"
                        app:layout_constraintTop_toTopOf="@+id/button11" />
                </androidx.constraintlayout.widget.ConstraintLayout>
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="020dp">

                    <Button
                        android:id="@+id/button10"
                        android:layout_width="140dp"
                        android:layout_height="50dp"
                        android:background="@drawable/botao_cancelar"
                        android:onClick="ModalVoltar"
                        android:text="@string/Cancelar"
                        android:gravity="center"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <Button
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:onClick="ModalVoltar"
                        android:background="@mipmap/ic_shortcut_cancel"
                        app:layout_constraintBottom_toBottomOf="@+id/button10"
                        app:layout_constraintEnd_toEndOf="@+id/button10"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/button10"
                        app:layout_constraintTop_toTopOf="@+id/button10" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>